--- a/Onliner for windows 10/Onliner for windows 10/MainPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/MainPage.xaml
@@ -10,7 +10,7 @@
 
 
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="VisualStateGroup">
                 <VisualState x:Name="VisualStateMobile">
@@ -48,16 +48,31 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Name="HelloStackPanel" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Text="Здравствуйте!" FontSize="44" Foreground="BlueViolet" TextAlignment="Center"/>
-            <TextBlock Text="Добро пожаловать на Onliner.by" FontSize="28" TextAlignment="Center" TextWrapping="Wrap"/>
+            <TextBlock Text="Здравствуйте!" FontSize="44" Foreground="{ThemeResource ForegroundCustomBlueBrush}" TextAlignment="Center"/>
+            <TextBlock Text="Добро пожаловать на Onliner.by" FontSize="28" TextAlignment="Center" TextWrapping="Wrap" Foreground="{ThemeResource ForegroundCustomBlackBrush}"/>
         </StackPanel>
         <StackPanel Name="InputControlStackpanel" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0" VerticalAlignment="Bottom">
             <TextBlock x:Name="textBlock" Text="Войти" FontSize="24" Foreground="Gray"/>
             <TextBox  Name="LoginTextBox" MinWidth="300" BorderThickness="1" BorderBrush="Gray" Margin="0,0,0,10"/>
             <TextBlock Text="Пароль" FontSize="24" Margin="4,0,0,0" Foreground="Gray"/>
             <PasswordBox Name="PasswordBox"  BorderThickness="1"  BorderBrush="Gray" Margin="0,0,0,20"/>
-            <Button Name="LaterLogIn" Content="Позже" FontSize="18" Height="50" Grid.Column="1" HorizontalAlignment="Stretch" Click="LaterLogIn_Click" Margin="0,5,0,0"/>
-            <Button Name="LoginButton" Content="Войти" HorizontalAlignment="Stretch" FontSize="18" Height="50" Margin="0,10,0,0" Background="Yellow" Click="LoginButton_Click"/>
+            <Button Name="LaterLogIn" 
+                    Content="Позже" 
+                    FontSize="18" 
+                    Height="50" 
+                    Grid.Column="1" 
+                    HorizontalAlignment="Stretch" 
+                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
+                    Click="LaterLogIn_Click" Margin="0,5,0,0"/>
+            <Button Name="LoginButton" 
+                    Content="Войти" 
+                    HorizontalAlignment="Stretch"
+                    FontSize="18"
+                    Height="50"
+                    Margin="0,10,0,0"
+                    Background="{ThemeResource BackGroundCustomYellowColorBrush}" 
+                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
+                    Click="LoginButton_Click"/>
         </StackPanel>
     </Grid>
     <Page.Transitions>
