--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -14,45 +14,47 @@
 
     <Page.Resources>
         <DataTemplate x:Key="CommentsList">
-            <Grid Background="{Binding ColorItem}" HorizontalAlignment="Stretch">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="12*"/>
-                    <ColumnDefinition Width="11*"/>
-                    <ColumnDefinition Width="37*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition/>
-                    <RowDefinition Height="59*"/>
-                </Grid.RowDefinitions>
-                <Ellipse Grid.Column="0" Grid.Row="1" Width="35" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,2,0,0">
-                    <Ellipse.Fill>
-                        <ImageBrush>
-                            <ImageBrush.ImageSource>
-                                <BitmapImage DecodePixelHeight="250" DecodePixelWidth="250" UriSource="{Binding Image}" />
-                            </ImageBrush.ImageSource>
-                        </ImageBrush>
-                    </Ellipse.Fill>
-                </Ellipse>
-                <TextBlock Text="{Binding Nickname}" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="0,1,0,0.333" HorizontalAlignment="Stretch" TextWrapping="NoWrap"/>
-                <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="1" FontSize="12" TextAlignment="Right" VerticalAlignment="Center" Margin="5,2,0,2.333" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
-                <TextBlock Text="{Binding Data}" Grid.Row="1" Grid.Column="1" FontSize="14" Margin="2,1.667,2,2" TextWrapping="Wrap" Grid.ColumnSpan="2" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
-                <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="3,0,0,0" >
-                    <TextBlock Text="&#xE19F;" FontSize="12" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" />
-                    <TextBlock Text="{Binding LikeCount}" FontSize="12" Margin="2,0,0,0" VerticalAlignment="Center"/>
-                </StackPanel>
-                <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right">
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                        <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center"/>
-                        <TextBlock Text="Ответить" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0"/>
+            <Border BorderThickness="0,0,0,1" BorderBrush="Gray">
+                <Grid  HorizontalAlignment="Stretch" Padding="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="12*"/>
+                        <ColumnDefinition Width="11*"/>
+                        <ColumnDefinition Width="37*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition/>
+                        <RowDefinition Height="59*"/>
+                    </Grid.RowDefinitions>
+                    <Ellipse Grid.Column="0" Grid.Row="1" Width="35" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,2,0,0">
+                        <Ellipse.Fill>
+                            <ImageBrush>
+                                <ImageBrush.ImageSource>
+                                    <BitmapImage DecodePixelHeight="250" DecodePixelWidth="250" UriSource="{Binding Image}" />
+                                </ImageBrush.ImageSource>
+                            </ImageBrush>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <TextBlock Text="{Binding Nickname}" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="2" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                    <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="1" FontSize="12" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
+                    <TextBlock Text="{Binding Data}" Grid.Row="1" Grid.Column="1" FontSize="14" Margin="2" TextWrapping="Wrap" Grid.ColumnSpan="2" VerticalAlignment="Top" HorizontalAlignment="Stretch" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                    <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2" >
+                        <TextBlock Text="&#xE19F;" FontSize="12" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
+                        <TextBlock Text="{Binding LikeCount}" FontSize="12" Margin="2" VerticalAlignment="Center" Foreground="Gray"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Margin="4,0,0,0" >
-                        <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center"/>
-                        <TextBlock Text="Цитировать" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0"/>
+                    <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center" Foreground="Gray"/>
+                            <TextBlock Text="Ответить" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="4,0,0,0" >
+                            <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center" Foreground="Gray"/>
+                            <TextBlock Text="Цитировать" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
+                        </StackPanel>
                     </StackPanel>
-                </StackPanel>
-            </Grid>
+                </Grid>
+            </Border>
         </DataTemplate>
         <Style x:Key="CommentsListViewStyle" TargetType="ListView">
             <Setter Property="IsTabStop" Value="False"/>
@@ -134,6 +136,7 @@
                            FontSize="18"
                            Style="{ThemeResource SubtitleTextBlockStyle}"
                            TextWrapping="Wrap"
+                           Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
                            Margin="5"/>
             </Grid>
         </DataTemplate>
@@ -144,7 +147,7 @@
         </DataTemplate>
         <DataTemplate x:Key="StoryTemlate">
             <Grid HorizontalAlignment="Stretch">
-                <toolkit:HtmlView Html="{Binding Value}" Margin="5"/>
+                <toolkit:HtmlView Html="{Binding Value}" Margin="5" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="ImageTemlate">
@@ -165,10 +168,11 @@
         <Style x:Key="ListViewItemNewsStyle" TargetType="ListViewItem">
             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
             <Setter Property="Padding" Value="0"/>
+            <Setter Property="Margin" Value="0"/>
         </Style>
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="FullNewsVisualStateGroup">
                 <VisualState x:Name="DeskTopVisualState">
@@ -177,7 +181,7 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="CommentsCoomBarButton.(AppBarButton.Visibility)" Value="Collapsed"/>
-                        <Setter Target="MainGrid.(Grid.Margin)" Value="0,50,0,0"/>
+                        <Setter Target="MainGrid.(Grid.Margin)" Value="0,0,0,0"/>
                         <Setter Target="MainNewsData.(Grid.Column)" Value="0"/>
 
                         <Setter Target="GridComments.(Grid.Visibility)" Value="Visible"/>
@@ -223,13 +227,17 @@
                               ItemsSource="{Binding NewsListItem}"
                               ItemContainerStyle="{StaticResource ListViewItemNewsStyle}"
                               SelectionChanged="NewsListInfo_SelectionChanged"/>
-                    <CommandBar Name="CommandBarForMobile" VerticalAlignment="Bottom">
-                        <AppBarButton Name="CommentsCoomBarButton" Label="Комментарии" Icon="Comment" Click="AppBarButton_Click"/>
-                        <AppBarButton Label="Открыть в браузере" Icon="World"/>
-                        <AppBarButton Label="Сохранить статью" Icon="Save"/>
+                    <CommandBar Name="CommandBarForMobile" VerticalAlignment="Bottom"
+                                Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
+                                Background="{ThemeResource BackGroundCustomMainElementColorBrush}">
+                        <AppBarButton Name="CommentsCoomBarButton" Label="Комментарии" Icon="Comment"
+                                      Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
+                                      Click="AppBarButton_Click"/>
+                        <AppBarButton Label="Открыть в браузере" Icon="World" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                        <AppBarButton Label="Сохранить статью" Icon="Save" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
                     </CommandBar>
                 </Grid>
-                <Grid x:Name="GridComments" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Background="White" Visibility="Visible">
+                <Grid x:Name="GridComments" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Background="{ThemeResource BackGroundCustomColorBrush}" Visibility="Visible">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
@@ -248,7 +256,7 @@
                             </Style>
                         </ListView.ItemContainerStyle>
                     </ListView>
-                    <Grid HorizontalAlignment="Stretch" Background="#FFE6E6E6" Height="48" Grid.Row="1" VerticalAlignment="Bottom">
+                    <Grid HorizontalAlignment="Stretch" Background="{ThemeResource BackGroundCustomHeaderColorBrush}" Height="48" Grid.Row="1" VerticalAlignment="Bottom">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="Auto"/>
@@ -265,14 +273,22 @@
                                 FontSize="18" 
                                 FontFamily="Segoe MDL2 Assets" 
                                 Margin="4"
-                                Background="#FFE6E6E6" 
+                                Background="{ThemeResource BackGroundCustomHeaderColorBrush}" 
                                 Grid.Column="1" 
+                                Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
                                 HorizontalAlignment="Center"
                                 Click="AddCommentButton_Click"/>
                     </Grid>
                 </Grid>
             </Grid>
         </Grid>
+        <ProgressRing Name="NewsProgressRing" 
+                      Width="100" 
+                      Height="100"
+                      Foreground="Blue"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Center"
+                      IsActive="True"/>
     </Grid>
 
     <Page.Transitions>
