--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -9,25 +9,27 @@
     xmlns:Selector="using:Onliner_for_windows_10.Model.DataTemplateSelector"
     xmlns:toolkit="using:MyToolkit.Controls"
     xmlns:webviewhelper="using:Onliner_for_windows_10.Helper"
+    xmlns:UserControl="using:Onliner_for_windows_10.UserControls"
     x:Class="Onliner_for_windows_10.Views.ViewNewsPage"
     mc:Ignorable="d">
 
     <Page.Resources>
         <DataTemplate x:Key="CommentsList">
             <Border BorderThickness="0,0,0,1" BorderBrush="Gray">
-                <Grid  HorizontalAlignment="Stretch" Padding="2">
+                <Grid  HorizontalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="12*"/>
-                        <ColumnDefinition Width="11*"/>
-                        <ColumnDefinition Width="37*"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="auto"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition Height="3*"/>
-                        <RowDefinition/>
-                        <RowDefinition Height="59*"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="auto"/>
+
                     </Grid.RowDefinitions>
-                    <Ellipse Grid.Column="0" Grid.Row="1" Width="35" Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,2,0,0">
+                    <Ellipse Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Width="35"  Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="5">
                         <Ellipse.Fill>
                             <ImageBrush>
                                 <ImageBrush.ImageSource>
@@ -36,21 +38,21 @@
                             </ImageBrush>
                         </Ellipse.Fill>
                     </Ellipse>
-                    <TextBlock Text="{Binding Nickname}" FontWeight="Bold" FontSize="14" TextAlignment="Center" VerticalAlignment="Center" Margin="2" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                    <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="1" FontSize="12" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
-                    <TextBlock Text="{Binding Data}" Grid.Row="1" Grid.Column="1" FontSize="14" Margin="2" TextWrapping="Wrap" Grid.ColumnSpan="2" VerticalAlignment="Top" HorizontalAlignment="Stretch" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                    <TextBlock Text="{Binding Nickname}" Grid.Column="1" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Margin="3" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                    <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="3" FontSize="12" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
+                    <UserControl:CommentsContentViewer x:Name="CommentsContentViewer" UserControl:CommentsContentViewer.HtmlString="{Binding Data}" BorderThickness="1" FontSize="14" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
                     <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2" >
-                        <TextBlock Text="&#xE19F;" FontSize="12" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
-                        <TextBlock Text="{Binding LikeCount}" FontSize="12" Margin="2" VerticalAlignment="Center" Foreground="Gray"/>
+                        <TextBlock Text="&#xE19F;" FontSize="14" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
+                        <TextBlock Text="{Binding LikeCount}" FontSize="14" Margin="2" VerticalAlignment="Center" Foreground="Gray"/>
                     </StackPanel>
-                    <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right">
+                    <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Right">
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                            <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center" Foreground="Gray"/>
-                            <TextBlock Text="Ответить" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
+                            <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
+                            <TextBlock Text="Ответить" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" Margin="4,0,0,0" >
-                            <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="12"  VerticalAlignment="Center" Foreground="Gray"/>
-                            <TextBlock Text="Цитировать" FontSize="12"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
+                        <StackPanel Orientation="Horizontal" Margin="6,0,0,0" >
+                            <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
+                            <TextBlock Text="Цитировать" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
                         </StackPanel>
                     </StackPanel>
                 </Grid>
@@ -252,7 +254,8 @@
                         </ListView.ItemContainerTransitions>
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
-                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                <Setter Property="Margin" Value="0"/>
                             </Style>
                         </ListView.ItemContainerStyle>
                     </ListView>
