--- a/Onliner for windows 10/Onliner for windows 10/testpage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/testpage.xaml
@@ -5,26 +5,55 @@
     xmlns:local="using:Onliner_for_windows_10.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:control="using:Onliner_for_windows_10.UserControls"
     mc:Ignorable="d">
 
-    <Grid Background="Aqua" Name="MainGrid">
-        <Grid  Margin="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Rectangle Width="3" Fill="GreenYellow" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"/>
+    
+    <ScrollViewer Background="White" Height="200">
 
-            <CheckBox Grid.Column="1" Grid.ColumnSpan="2"/>
-            <TextBlock Text="QWERTY" Grid.Row="0" Grid.Column="2" FontSize="14" Margin="2" HorizontalAlignment="Stretch"/>
-            <TextBlock Text="123123123" Grid.Row="0" Grid.Column="3" Foreground="Gray" FontSize="14" HorizontalAlignment="Stretch" TextAlignment="Right" Margin="2"/>
-            <TextBlock Text="asdasdasdasd" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Margin="2,0,0,0" TextWrapping="Wrap" FontSize="20" HorizontalAlignment="Stretch"/>
-        </Grid>
-    </Grid>
+            <Border BorderThickness="0,0,0,1" BorderBrush="Gray">
+                <Grid  HorizontalAlignment="Stretch">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="auto"/>
+
+                    </Grid.RowDefinitions>
+                    <Ellipse Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Width="35"  Height="35" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="5">
+                        <Ellipse.Fill>
+                            <ImageBrush>
+                                <ImageBrush.ImageSource>
+                                    <BitmapImage DecodePixelHeight="250" DecodePixelWidth="250" UriSource="{Binding Image}" />
+                                </ImageBrush.ImageSource>
+                            </ImageBrush>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                <TextBlock Text="{Binding Nickname}" Grid.Column="1" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="14" TextAlignment="Left" VerticalAlignment="Center" Margin="3" HorizontalAlignment="Stretch" TextWrapping="NoWrap" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
+                <TextBlock Text="{Binding Time}" Grid.Row="0" Grid.Column="3" FontSize="12" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch"/>
+                    <control:CommentsContentViewer x:Name="CommentsContentViewer" control:CommentsContentViewer.HtmlString="{Binding Data}" BorderThickness="1" FontSize="14" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3"/>
+                    <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2" >
+                        <TextBlock Text="&#xE19F;" FontSize="14" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Foreground="Gray"/>
+                        <TextBlock Text="{Binding LikeCount}" FontSize="14" Margin="2" VerticalAlignment="Center" Foreground="Gray"/>
+                    </StackPanel>
+                    <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Right">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                            <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
+                            <TextBlock Text="Ответить" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="6,0,0,0" >
+                            <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
+                            <TextBlock Text="Цитировать" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </Border>
+
+    </ScrollViewer>
+
 </Page>
