--- a/Onliner for windows 10/Onliner for windows 10/Views/WeatherPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/WeatherPage.xaml
@@ -6,14 +6,13 @@
     xmlns:local="using:Onliner_for_windows_10.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:nowWeather="using:Onliner_for_windows_10.Model"
     xmlns:converters="using:Onliner_for_windows_10"
+    xmlns:viewModel="using:Onliner_for_windows_10.View_Model"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance viewModelWeather:WeatherPage , IsDesignTimeCreatable=True}"
     >
     <!--°-->
     <Page.Resources>
-        <nowWeather:Now x:Key="NowWeather"/>
         <converters:IndexImageTonameImageConverter x:Key="Convert"/>
 
         <DataTemplate x:Key="TodayWeather">
@@ -62,7 +61,7 @@
                 <TextBlock Text="{Binding dayOfMonth}" FontSize="18"  TextAlignment="Center" Margin="0,5,0,2" Grid.Row="1" Grid.ColumnSpan="2" Foreground="{ThemeResource ForegroundCustomBlackBrush}"/>
 
                 <Viewbox Stretch="Uniform" Width="70" Height="70" Grid.Row="2" Grid.ColumnSpan="2" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                    <Path Data="{StaticResource WeatherDaySVG}" Fill="Yellow" />
+                    <Path Data="{Binding falloutIcon, Converter={StaticResource Convert}}" Fill="Yellow" />
                 </Viewbox>
 
                 <Viewbox Stretch="Uniform" Width="20" Height="20" Grid.Row="3" Grid.Column="0" Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -175,7 +174,7 @@
                             <TextBlock Text="брест" Grid.Row="2" Grid.Column="2"/>
                         </Grid>
                     </Popup>
-                <Grid HorizontalAlignment="Center" Margin="0,10,0,10">
+                    <Grid HorizontalAlignment="Center" Margin="0,10,0,10" DataContext="{Binding Now}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
@@ -202,8 +201,8 @@
                                    Style="{ThemeResource  BodyTextBlockStyle}">
                            <Run Text="{Binding temperature}"/>°
                         </TextBlock>
-                 
-                    <Grid Name="NowWeatherMoreGrid" HorizontalAlignment="Stretch" Grid.Row="1" Grid.ColumnSpan="2">
+
+                        <Grid Name="NowWeatherMoreGrid" HorizontalAlignment="Stretch" Grid.Row="1" Grid.ColumnSpan="2">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
@@ -236,10 +235,10 @@
                 </Grid>
             </StackPanel>
         </Grid>
-        <Line Stroke="Gray" StrokeThickness="1" X1="0" X2="{Binding ActualWidth}" Grid.Row="1" Grid.ColumnSpan="2" Margin="5"/>
+            <Line Stroke="Gray" StrokeThickness="1" X1="0" X2="{Binding ActualWidth, Mode=OneWay}" Grid.Row="1" Grid.ColumnSpan="2" Margin="5"/>
         <!--All Day temperature-->
-        <ScrollViewer Name="TodayWeatherScroll" Grid.Row="2" HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Visible" VerticalScrollMode="Disabled" VerticalScrollBarVisibility="Disabled">
-            <ListView Name="TemperatureTodayListView" Grid.Row="2" ItemTemplate="{StaticResource TodayWeather}"
+        <ScrollViewer Name="TodayWeatherScroll" Grid.Row="2" HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Hidden" VerticalScrollMode="Disabled" VerticalScrollBarVisibility="Disabled">
+                <ListView Name="TemperatureTodayListView" ItemsSource="{Binding WeatherTodayItems}" Grid.Row="2" ItemTemplate="{StaticResource TodayWeather}"
                      HorizontalAlignment="Center" VerticalAlignment="Center">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -248,9 +247,9 @@
                 </ListView.ItemsPanel>
             </ListView>
         </ScrollViewer>
-        <Line Stroke="Gray" StrokeThickness="1" X1="0" X2="{Binding ActualWidth}" Grid.Row="3" Grid.ColumnSpan="2" Margin="5"/>
+            <Line Stroke="Gray" StrokeThickness="1" X1="0" X2="{Binding ActualWidth, Mode=OneWay}" Grid.Row="3" Grid.ColumnSpan="2" Margin="5"/>
         <!--Week WEATHER INFORMATION-->
-            <ScrollViewer Name="WeeksDayWeather" Grid.Row="4" HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Visible" VerticalScrollMode="Disabled" VerticalScrollBarVisibility="Disabled">
+            <ScrollViewer Name="WeeksDayWeather" Grid.Row="4" HorizontalScrollMode="Auto" HorizontalScrollBarVisibility="Hidden" VerticalScrollMode="Disabled" VerticalScrollBarVisibility="Disabled">
                 <ListView Name="WeekWeather" ItemsSource="{Binding Items}" ItemTemplate="{StaticResource WeeksWeather}"
                       HorizontalAlignment="Center" VerticalAlignment="Center">
                     <ListView.ItemsPanel>
@@ -260,7 +259,7 @@
                     </ListView.ItemsPanel>
                 </ListView>
                 </ScrollViewer>
-            <ProgressRing Name="WeatherProgressRing" Width="100" Height="100" Foreground="Blue" VerticalAlignment="Center" HorizontalAlignment="Center"  IsActive="True" Grid.RowSpan="5"/>
+            <ProgressRing Name="WeatherProgressRing" Width="100" Height="100" Foreground="Blue" VerticalAlignment="Center" HorizontalAlignment="Center"  IsActive="{Binding CurrentProgress}" Grid.RowSpan="5"/>
         </Grid>
    
     </ScrollViewer>
